# multi-user-sockets-chat

./: .gitignore  CMakeLists.txt  Makefile.mk  README.md
client/: Makefile
client/source/: main.c
lib/: constants.h  contants.h  message.h  structs.h
lib/client/: client.c  client.h
lib/list/: list.c  list.h
lib/message/: message.c  message.h
server/: Makefile
server/source/: main.c
server/source/list/: list.c  list.h
